# Arduino-like-setup-stm32f4

./: CMakeLists.txt  CMakePresets.json  Help.txt  STM32F401CDUX_FLASH.ld  build.bat  clean_project.bat  gcc-arm-none-eabi.cmake  project_main.c
Core_PROJECT/Include/: main.h
Core_PROJECT/src/: main.c  system_it.c
Drivers/STM32_HAL/Include/: stm32f4xx_hal_conf.h
